--- a/ATUReports/Results/Run_17/CurrentRun.html
+++ b/ATUReports/Results/Run_17/CurrentRun.html
@@ -80,7 +80,7 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
 <td id="content">
                     <div class="info">
                         The following pie chart demonstrates the percentage of Passed, Failed and Skipped Test Cases<br/>
-                        Time Taken for Executing below Test Cases: <b>44 Sec</b> <br/>
+                        Time Taken for Executing below Test Cases: <b>302 Sec</b> <br/>
                         Current Run Number: <b>Run 17</b>
                     </div>
 <div class="info"><br/><b>Run Description</b><br/><br/>Here you can give description about the current Run</div>                    <div>
@@ -90,12 +90,12 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                             <tr>
                                 <td>Execution Date</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>13-Jul-2017 12:01:04</td>
+                                <td>18-Jul-2017 12:50:59</td>
                             </tr>
                             <tr>
                                 <td>Total Test Cases</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>8</td>
+                                <td>4</td>
                             </tr>
                             <tr>
                                 <td>Passed</td>
@@ -106,7 +106,7 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                             <tr>
                                 <td>Failed</td>
                                 <td>&nbsp;&nbsp;:&nbsp;&nbsp;</td>
-                                <td>5</td>
+                                <td>1</td>
                             </tr>
 
                             <tr>
@@ -133,7 +133,7 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
 <div style="float:left;  color: #585858; font-size: 14px;">	<select id="suiteFilter" class="filter">
 <option class="filterOption" value="all">All Suites</option>
 
-<option class="filterOption" value="atuSuiteNameMapper1">Suite</option>
+<option class="filterOption" value="atuSuiteNameMapper1">Default suite</option>
 
 </select>Filter Suites&nbsp;&nbsp;</div>
                         <table id="tableStyle" class="chartStyle" style="height:50px; float: left">
@@ -148,83 +148,43 @@ if($(this).val()=='tests'){ $('.pass').show(); $('.fail').show(); $('.skip').sho
                             </tr>
 
                             <tr class="all pass atuSuiteNameMapper1">
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Suite</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">BatchExecution</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Test Method</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">cNetLoginScenario</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">1</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLoginScenario_Iteration1\cNetLoginScenario.html">8 Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">cNetLoginScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLoginScenario_Iteration1\cNetLoginScenario.html">14 Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                             <tr class="all pass atuSuiteNameMapper1">
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Suite</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">BatchExecution</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Test Method</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">cNetLogoutScenario</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">970 Milli Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_Azure_DEV91.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_Azure_DEV91.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_Azure_DEV91.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_Azure_DEV91.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_Azure_DEV91.html">UpdateVM_NewYork_Delete_Azure_DEV91</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_Azure_DEV91.html">2</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration2\UpdateVM_NewYork_Delete_Azure_DEV91.html">134 Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                             <tr class="all pass atuSuiteNameMapper1">
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Suite</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">BatchExecution</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">UpdateVirtualMachine_Update</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Test Method</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">cNetLogoutScenario</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1 Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Default suite</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">cNetLogoutScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\cNetLogoutScenario_Iteration1\cNetLogoutScenario.html">5 Sec</a></td>
                                 <td><img  style="border: none; width: 25px" src="../../HTML_Design_Files/IMG/pass.png"></td>
                             </tr>
                             <tr class="all fail atuSuiteNameMapper1">
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">Suite</a></td>
-                              <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">BatchExecution</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">Test Method</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">UpdateVM_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">1</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration1\UpdateVM_Delete.html">22 Sec</a></td>
-                                <td><img  style="border: none;width: 25px" src="../../HTML_Design_Files/IMG/fail.png"></td>
-                            </tr>
-                            <tr class="all fail atuSuiteNameMapper1">
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">Suite</a></td>
-                              <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">BatchExecution</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">Test Method</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">UpdateVM_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">2</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration2\UpdateVM_Delete.html">875 Milli Sec</a></td>
-                                <td><img  style="border: none;width: 25px" src="../../HTML_Design_Files/IMG/fail.png"></td>
-                            </tr>
-                            <tr class="all fail atuSuiteNameMapper1">
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration3\UpdateVM_Delete.html">Suite</a></td>
-                              <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration3\UpdateVM_Delete.html">BatchExecution</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration3\UpdateVM_Delete.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration3\UpdateVM_Delete.html">Test Method</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration3\UpdateVM_Delete.html">UpdateVM_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration3\UpdateVM_Delete.html">3</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration3\UpdateVM_Delete.html">735 Milli Sec</a></td>
-                                <td><img  style="border: none;width: 25px" src="../../HTML_Design_Files/IMG/fail.png"></td>
-                            </tr>
-                            <tr class="all fail atuSuiteNameMapper1">
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration4\UpdateVM_Delete.html">Suite</a></td>
-                              <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration4\UpdateVM_Delete.html">BatchExecution</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration4\UpdateVM_Delete.html">UpdateVirtualMachine_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration4\UpdateVM_Delete.html">Test Method</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration4\UpdateVM_Delete.html">UpdateVM_Delete</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration4\UpdateVM_Delete.html">4</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Delete\UpdateVirtualMachine_Iteration4\UpdateVM_Delete.html">755 Milli Sec</a></td>
-                                <td><img  style="border: none;width: 25px" src="../../HTML_Design_Files/IMG/fail.png"></td>
-                            </tr>
-                            <tr class="all fail atuSuiteNameMapper1">
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Suite</a></td>
-                              <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLoginScenario_Iteration1\cNetLoginScenario.html">BatchExecution</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLoginScenario_Iteration1\cNetLoginScenario.html">UpdateVirtualMachine_Update</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLoginScenario_Iteration1\cNetLoginScenario.html">Test Method</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLoginScenario_Iteration1\cNetLoginScenario.html">cNetLoginScenario</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLoginScenario_Iteration1\cNetLoginScenario.html">1</a></td>
-                                <td><a href="Suite\Test\BatchExecution\UpdateVirtualMachine_Update\cNetLoginScenario_Iteration1\cNetLoginScenario.html">2 Sec</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">Default suite</a></td>
+                              <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">BatchExecution</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">UpdateVMScenario</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">Test Method</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">UpdateVM_NewYork_Delete_VMWare_DEV63</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">1</a></td>
+                                <td><a href="Default suite\Default test\BatchExecution\UpdateVMScenario\UpdateVirtualMachine_Iteration1\UpdateVM_NewYork_Delete_VMWare_DEV63.html">138 Sec</a></td>
                                 <td><img  style="border: none;width: 25px" src="../../HTML_Design_Files/IMG/fail.png"></td>
                             </tr>
                         </table>
