--- a/ATUReports/Results/ConsolidatedPage.html
+++ b/ATUReports/Results/ConsolidatedPage.html
@@ -65,7 +65,25 @@
  <li class="menuStyle"><a href="Run_2\CurrentRun.html" >Run 2 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_3\CurrentRun.html" >Run 3 </a></li>
+ <li class="menuStyle"><a href="Run_3\CurrentRun.html" >Run 3 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_4\CurrentRun.html" >Run 4 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_5\CurrentRun.html" >Run 5 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_6\CurrentRun.html" >Run 6 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_7\CurrentRun.html" >Run 7 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_8\CurrentRun.html" >Run 8 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_9\CurrentRun.html" >Run 9 </a></li>
 
 
                     </ul>
