--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -216,4 +216,226 @@
 <tr><td>STEP216</td></tr>
 <tr><td>STEP217</td></tr>
 <tr><td>STEP218</td></tr>
+<tr><td>STEP219</td></tr>
+<tr><td>STEP220</td></tr>
+<tr><td>STEP221</td></tr>
+<tr><td>STEP222</td></tr>
+<tr><td>STEP223</td></tr>
+<tr><td>STEP224</td></tr>
+<tr><td>STEP225</td></tr>
+<tr><td>STEP226</td></tr>
+<tr><td>STEP227</td></tr>
+<tr><td>STEP228</td></tr>
+<tr><td>STEP229</td></tr>
+<tr><td>STEP230</td></tr>
+<tr><td>STEP231</td></tr>
+<tr><td>STEP232</td></tr>
+<tr><td>STEP233</td></tr>
+<tr><td>STEP234</td></tr>
+<tr><td>STEP235</td></tr>
+<tr><td>STEP236</td></tr>
+<tr><td>STEP237</td></tr>
+<tr><td>STEP238</td></tr>
+<tr><td>STEP239</td></tr>
+<tr><td>STEP240</td></tr>
+<tr><td>STEP241</td></tr>
+<tr><td>STEP242</td></tr>
+<tr><td>STEP243</td></tr>
+<tr><td>STEP244</td></tr>
+<tr><td>STEP245</td></tr>
+<tr><td>STEP246</td></tr>
+<tr><td>STEP247</td></tr>
+<tr><td>STEP248</td></tr>
+<tr><td>STEP249</td></tr>
+<tr><td>STEP250</td></tr>
+<tr><td>STEP251</td></tr>
+<tr><td>STEP252</td></tr>
+<tr><td>STEP253</td></tr>
+<tr><td>STEP254</td></tr>
+<tr><td>STEP255</td></tr>
+<tr><td>STEP256</td></tr>
+<tr><td>STEP257</td></tr>
+<tr><td>STEP258</td></tr>
+<tr><td>STEP259</td></tr>
+<tr><td>STEP260</td></tr>
+<tr><td>STEP261</td></tr>
+<tr><td>STEP262</td></tr>
+<tr><td>STEP263</td></tr>
+<tr><td>STEP264</td></tr>
+<tr><td>STEP265</td></tr>
+<tr><td>STEP266</td></tr>
+<tr><td>STEP267</td></tr>
+<tr><td>STEP268</td></tr>
+<tr><td>STEP269</td></tr>
+<tr><td>STEP270</td></tr>
+<tr><td>STEP271</td></tr>
+<tr><td>STEP272</td></tr>
+<tr><td>STEP273</td></tr>
+<tr><td>STEP274</td></tr>
+<tr><td>STEP275</td></tr>
+<tr><td>STEP276</td></tr>
+<tr><td>STEP277</td></tr>
+<tr><td>STEP278</td></tr>
+<tr><td>STEP279</td></tr>
+<tr><td>STEP280</td></tr>
+<tr><td>STEP281</td></tr>
+<tr><td>STEP282</td></tr>
+<tr><td>STEP283</td></tr>
+<tr><td>STEP284</td></tr>
+<tr><td>STEP285</td></tr>
+<tr><td>STEP286</td></tr>
+<tr><td>STEP287</td></tr>
+<tr><td>STEP288</td></tr>
+<tr><td>STEP289</td></tr>
+<tr><td>STEP290</td></tr>
+<tr><td>STEP291</td></tr>
+<tr><td>STEP292</td></tr>
+<tr><td>STEP293</td></tr>
+<tr><td>STEP294</td></tr>
+<tr><td>STEP295</td></tr>
+<tr><td>STEP296</td></tr>
+<tr><td>STEP297</td></tr>
+<tr><td>STEP298</td></tr>
+<tr><td>STEP299</td></tr>
+<tr><td>STEP300</td></tr>
+<tr><td>STEP301</td></tr>
+<tr><td>STEP302</td></tr>
+<tr><td>STEP303</td></tr>
+<tr><td>STEP304</td></tr>
+<tr><td>STEP305</td></tr>
+<tr><td>STEP306</td></tr>
+<tr><td>STEP307</td></tr>
+<tr><td>STEP308</td></tr>
+<tr><td>STEP309</td></tr>
+<tr><td>STEP310</td></tr>
+<tr><td>STEP311</td></tr>
+<tr><td>STEP312</td></tr>
+<tr><td>STEP313</td></tr>
+<tr><td>STEP314</td></tr>
+<tr><td>STEP315</td></tr>
+<tr><td>STEP316</td></tr>
+<tr><td>STEP317</td></tr>
+<tr><td>STEP318</td></tr>
+<tr><td>STEP319</td></tr>
+<tr><td>STEP320</td></tr>
+<tr><td>STEP321</td></tr>
+<tr><td>STEP322</td></tr>
+<tr><td>STEP323</td></tr>
+<tr><td>STEP324</td></tr>
+<tr><td>STEP325</td></tr>
+<tr><td>STEP326</td></tr>
+<tr><td>STEP327</td></tr>
+<tr><td>STEP328</td></tr>
+<tr><td>STEP329</td></tr>
+<tr><td>STEP330</td></tr>
+<tr><td>STEP331</td></tr>
+<tr><td>STEP332</td></tr>
+<tr><td>STEP333</td></tr>
+<tr><td>STEP334</td></tr>
+<tr><td>STEP335</td></tr>
+<tr><td>STEP336</td></tr>
+<tr><td>STEP337</td></tr>
+<tr><td>STEP338</td></tr>
+<tr><td>STEP339</td></tr>
+<tr><td>STEP340</td></tr>
+<tr><td>STEP341</td></tr>
+<tr><td>STEP342</td></tr>
+<tr><td>STEP343</td></tr>
+<tr><td>STEP344</td></tr>
+<tr><td>STEP345</td></tr>
+<tr><td>STEP346</td></tr>
+<tr><td>STEP347</td></tr>
+<tr><td>STEP348</td></tr>
+<tr><td>STEP349</td></tr>
+<tr><td>STEP350</td></tr>
+<tr><td>STEP351</td></tr>
+<tr><td>STEP352</td></tr>
+<tr><td>STEP353</td></tr>
+<tr><td>STEP354</td></tr>
+<tr><td>STEP355</td></tr>
+<tr><td>STEP356</td></tr>
+<tr><td>STEP357</td></tr>
+<tr><td>STEP358</td></tr>
+<tr><td>STEP359</td></tr>
+<tr><td>STEP360</td></tr>
+<tr><td>STEP361</td></tr>
+<tr><td>STEP362</td></tr>
+<tr><td>STEP363</td></tr>
+<tr><td>STEP364</td></tr>
+<tr><td>STEP365</td></tr>
+<tr><td>STEP366</td></tr>
+<tr><td>STEP367</td></tr>
+<tr><td>STEP368</td></tr>
+<tr><td>STEP369</td></tr>
+<tr><td>STEP370</td></tr>
+<tr><td>STEP371</td></tr>
+<tr><td>STEP372</td></tr>
+<tr><td>STEP373</td></tr>
+<tr><td>STEP374</td></tr>
+<tr><td>STEP375</td></tr>
+<tr><td>STEP376</td></tr>
+<tr><td>STEP377</td></tr>
+<tr><td>STEP378</td></tr>
+<tr><td>STEP379</td></tr>
+<tr><td>STEP380</td></tr>
+<tr><td>STEP381</td></tr>
+<tr><td>STEP382</td></tr>
+<tr><td>STEP383</td></tr>
+<tr><td>STEP384</td></tr>
+<tr><td>STEP385</td></tr>
+<tr><td>STEP386</td></tr>
+<tr><td>STEP387</td></tr>
+<tr><td>STEP388</td></tr>
+<tr><td>STEP389</td></tr>
+<tr><td>STEP390</td></tr>
+<tr><td>STEP391</td></tr>
+<tr><td>STEP392</td></tr>
+<tr><td>STEP393</td></tr>
+<tr><td>STEP394</td></tr>
+<tr><td>STEP395</td></tr>
+<tr><td>STEP396</td></tr>
+<tr><td>STEP397</td></tr>
+<tr><td>STEP398</td></tr>
+<tr><td>STEP399</td></tr>
+<tr><td>STEP400</td></tr>
+<tr><td>STEP401</td></tr>
+<tr><td>STEP402</td></tr>
+<tr><td>STEP403</td></tr>
+<tr><td>STEP404</td></tr>
+<tr><td>STEP405</td></tr>
+<tr><td>STEP406</td></tr>
+<tr><td>STEP407</td></tr>
+<tr><td>STEP408</td></tr>
+<tr><td>STEP409</td></tr>
+<tr><td>STEP410</td></tr>
+<tr><td>STEP411</td></tr>
+<tr><td>STEP412</td></tr>
+<tr><td>STEP413</td></tr>
+<tr><td>STEP414</td></tr>
+<tr><td>STEP415</td></tr>
+<tr><td>STEP416</td></tr>
+<tr><td>STEP417</td></tr>
+<tr><td>STEP418</td></tr>
+<tr><td>STEP419</td></tr>
+<tr><td>STEP420</td></tr>
+<tr><td>STEP421</td></tr>
+<tr><td>STEP422</td></tr>
+<tr><td>STEP423</td></tr>
+<tr><td>STEP424</td></tr>
+<tr><td>STEP425</td></tr>
+<tr><td>STEP426</td></tr>
+<tr><td>STEP427</td></tr>
+<tr><td>STEP428</td></tr>
+<tr><td>STEP429</td></tr>
+<tr><td>STEP430</td></tr>
+<tr><td>STEP431</td></tr>
+<tr><td>STEP432</td></tr>
+<tr><td>STEP433</td></tr>
+<tr><td>STEP434</td></tr>
+<tr><td>STEP435</td></tr>
+<tr><td>STEP436</td></tr>
+<tr><td>STEP437</td></tr>
+<tr><td>STEP438</td></tr>
+<tr><td>STEP439</td></tr>
+<tr><td>STEP440</td></tr>
 </table>
