--- a/ATUReports/Results/ConsolidatedPage.html
+++ b/ATUReports/Results/ConsolidatedPage.html
@@ -125,7 +125,13 @@
  <li class="menuStyle"><a href="Run_22\CurrentRun.html" >Run 22 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_23\CurrentRun.html" >Run 23 </a></li>
+ <li class="menuStyle"><a href="Run_23\CurrentRun.html" >Run 23 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_24\CurrentRun.html" >Run 24 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_25\CurrentRun.html" >Run 25 </a></li>
 
 
                     </ul>
