--- a/ATUReports/Results/ConsolidatedPage.html
+++ b/ATUReports/Results/ConsolidatedPage.html
@@ -110,7 +110,10 @@
  <li class="menuStyle"><a href="Run_17\CurrentRun.html" >Run 17 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_18\CurrentRun.html" >Run 18 </a></li>
+ <li class="menuStyle"><a href="Run_18\CurrentRun.html" >Run 18 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_19\CurrentRun.html" >Run 19 </a></li>
 
 
                     </ul>
