--- a/ATUReports/Results/ConsolidatedPage.html
+++ b/ATUReports/Results/ConsolidatedPage.html
@@ -119,7 +119,10 @@
  <li class="menuStyle"><a href="Run_20\CurrentRun.html" >Run 20 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_21\CurrentRun.html" >Run 21 </a></li>
+ <li class="menuStyle"><a href="Run_21\CurrentRun.html" >Run 21 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_22\CurrentRun.html" >Run 22 </a></li>
 
 
                     </ul>
